# minamo-project

./: .gitignore  Cargo.toml  Dockerfile.relay-node  LICENSE  README.ja.md  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.browser-js.json  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
assets/: kagami.css  minamo.css
desktop/: desktop.js  index.html  styles.css
diagnostics/: avatar-mapping.html  avatar-mapping.js  no-broken-finger.html  no-broken-finger.js
docs/: ARCHITECTURE.ja.md  ARCHITECTURE.md  ARCHITECTURE_TARGET.ja.md  ARCHITECTURE_TARGET.md  BACKLOG.ja.md  BACKLOG.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  DEPENDENCY_POLICY.ja.md  DEPENDENCY_POLICY.md  DEV_HTTPS.ja.md  DEV_HTTPS.md  GLOSSARY.ja.md  GLOSSARY.md  IMPLEMENTATION_PROGRESS.ja.md  IMPLEMENTATION_PROGRESS.md  INDEX.ja.md  INDEX.md  ISSUE_CLOSURE.md  ISSUE_LABELS.ja.md  ISSUE_LABELS.md  ISSUE_REGISTRATION_PROMPT.ja.md  ISSUE_REGISTRATION_PROMPT.md  PAGES_DEMO.ja.md  PAGES_DEMO.md  PROTOCOL.ja.md  PROTOCOL.md  PROTOCOL_V2_DRAFT.ja.md  PROTOCOL_V2_DRAFT.md  QUICKSTART.ja.md  QUICKSTART.md  RELEASE_CHECKLIST.ja.md  RELEASE_CHECKLIST.md  ROADMAP.ja.md  ROADMAP.md  SECURITY_REVIEW.ja.md  SECURITY_REVIEW.md
issues/: README.ja.md  README.md  index.csv  register-prompt-ja.md  register-prompt.md
landing/: app.js  (+2 more)
relay-rs/: Cargo.toml  Dockerfile  grafana-dashboard.json
relay-rs/src/: main.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+412 files in other folders)
