[package]
name = "minamo-desktop"
version = "0.1.8"
description = "Minamo Studio desktop shell"
edition = "2021"
license = "0BSD"

[lib]
name = "minamo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
